# sqs-consumer

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  Taskfile.yml  compose.yml  flake.nix  rust-toolchain.toml
.github/workflows/: pre-commit.yml
examples/: basic_consumer.rs
scripts/: iac.sh
src/: aws.rs  lib.rs  traits.rs
src/runtime/: delete.rs  metrics.rs  mod.rs  poller.rs  runtime.rs  signal.rs  timer.rs
