[package]
name = "sqs-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = "0.30.0"
pin-project = "1.1.10"
rand = "0.9.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
